--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,13 @@ services:
   web:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
+#    command: bundle exec rdebug-ide --host 0.0.0.0 --port 1234 --dispatcher-port 26162 -- /myapp/bin/rails s -b 0.0.0.0 -p 3000 -e development
     volumes:
       - .:/myapp
     ports:
-      - "3000:3000"
+      - "127.0.0.1:3000:3000"
+      - "127.0.0.1:1234:1234"
+      - "127.0.0.1:26162:26162"
     depends_on:
       - db
     container_name: web
