--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   web:
     build: .
-    command: rm /myapp/tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: /usr/local/bin/start.sh
     volumes:
       - .:/myapp
     ports:
