--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     container_name: web
 
   db:
-    image: mysql:5.7
+    image: mysql/mysql-server:5.7
     environment:
       MYSQL_ROOT_PASSWORD: root_password
     volumes_from:
