--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-  web: &web_base
+  web: &rails_service_base
     build: .
     command: /usr/local/bin/start.sh
     volumes:
@@ -11,7 +11,7 @@ services:
       - db
     container_name: web
   spring:
-    <<: *web_base
+    <<: *rails_service_base
     command: spring server
     ports: []
     pid: host
